[tool.poetry]
name = "yeet-cli"
version = "0.1.0"
description = "CLI tool for fetching and managing Yeet devices."
authors = ["YeetCode Developers <YeetCode-devs@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "yeet_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
yeet-api = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
